--- a/lessons/SG3_problem6_interactive_lesson.html
+++ b/lessons/SG3_problem6_interactive_lesson.html
@@ -94,6 +94,19 @@
   #floatCalc{ position:fixed; right:16px; bottom:16px; width:340px; max-width: calc(100vw - 32px);
     background:#ffffff; border:1px solid var(--line); border-radius:14px; box-shadow: 0 18px 40px rgba(0,0,0,.18);
     z-index:9999; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto; }
+
+  /* Floating R output drawer */
+  #floatROut{ position:fixed; left:16px; bottom:16px; width:520px; max-width: calc(100vw - 32px);
+    background:#ffffff; border:1px solid var(--line); border-radius:14px; box-shadow: 0 18px 40px rgba(0,0,0,.18);
+    z-index:9998; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto; }
+  #floatROut header{ background:#111827; color:#fff; padding:10px 12px; border-radius:14px 14px 0 0; display:flex; align-items:center; justify-content:space-between; }
+  #floatROut header .title{ font-weight:900; font-size:13px; }
+  #floatROut header button{ padding:6px 8px; border-radius:10px; border:1px solid rgba(255,255,255,.25); background:rgba(255,255,255,.12); color:#fff; }
+  #floatROut .body{ padding:10px 12px; }
+  #floatROut .tabs{ display:flex; gap:6px; flex-wrap:wrap; margin-bottom:8px; }
+  #floatROut .tabs button{ padding:7px 9px; border-radius:999px; border:1px solid #374151; background:#0b1220; color:#e5e7eb; font-weight:900; }
+  #floatROut .tabs button[aria-pressed="true"]{ background:#111827; border-color:#93c5fd; color:#fff; }
+  #floatROut pre{ max-height: 320px; overflow:auto; margin:0; background:#0b1220; color:#e5e7eb; border:1px solid #374151; border-radius:10px; padding:10px 12px; }
   #floatCalc header{ background:var(--teal); color:#fff; padding:10px 12px; border-radius:14px 14px 0 0; display:flex; align-items:center; justify-content:space-between; }
   #floatCalc header .title{ font-weight:900; font-size:13px; }
   #floatCalc header button{ padding:6px 8px; border-radius:10px; border:1px solid rgba(255,255,255,.25); background:rgba(255,255,255,.12); color:#fff; }
@@ -690,6 +703,75 @@ contrast(em6.cell, cell6.list)
 
 </div>
 
+<!-- Floating R output (always available) -->
+<div id="floatROut" aria-label="Floating R output">
+  <header>
+    <div class="title">SG3 R output</div>
+    <div style="display:flex; gap:6px;">
+      <button id="routMin" title="Minimize">Hide</button>
+    </div>
+  </header>
+  <div class="body" id="routBody">
+    <div class="tabs" role="tablist" aria-label="R output tabs">
+      <button class="rtab" data-tab="rout6a" aria-pressed="true">6a means</button>
+      <button class="rtab" data-tab="rout6c" aria-pressed="false">6c contrasts</button>
+    </div>
+    <div id="rout6a" class="rpanel">
+      <pre><code>em6.damage
+##  damagef emmean    SE df lower.CL upper.CL
+##  Left      6.17 0.254 15     5.62     6.71
+##  Right     7.61 0.254 15     7.07     8.15
+##  Control   8.67 0.254 15     8.12     9.21
+##
+## Results are averaged over the levels of: stimuli
+## Confidence level used: 0.95
+
+em6.stimuli
+##  stimuli emmean    SE df lower.CL upper.CL
+##  digits    8.06 0.218 15     7.59     8.52
+##  letters   7.28 0.259 15     6.72     7.83
+##  mixed     7.11 0.251 15     6.58     7.65
+##
+## Results are averaged over the levels of: damagef
+## Confidence level used: 0.95
+
+em6.cell
+##  damagef stimuli emmean    SE df lower.CL upper.CL
+##  Left    digits    7.00 0.378 15     6.20     7.80
+##  Right   digits    8.17 0.378 15     7.36     8.97
+##  Control digits    9.00 0.378 15     8.20     9.80
+##  Left    letters   5.67 0.449 15     4.71     6.62
+##  Right   letters   7.50 0.449 15     6.54     8.46
+##  Control letters   8.67 0.449 15     7.71     9.62
+##  Left    mixed     5.83 0.435 15     4.91     6.76
+##  Right   mixed     7.17 0.435 15     6.24     8.09
+##  Control mixed     8.33 0.435 15     7.41     9.26
+##
+## Confidence level used: 0.95</code></pre>
+    </div>
+    <div id="rout6c" class="rpanel" style="display:none;">
+      <pre><code>contrast(em6.damage, damage6.list)
+##  contrast    estimate    SE df t.ratio p.value
+##  c(-2, 1, 1)     3.94 0.623 15   6.335 <0.0001
+##
+## Results are averaged over the levels of: stimuli
+
+contrast(em6.stimuli, stimuli6.list)
+##  contrast    estimate    SE df t.ratio p.value
+##  c(1, 0, -1)    0.944 0.311 15   3.034  0.0084
+##
+## Results are averaged over the levels of: damagef
+
+contrast(em6.cell, cell6.list)
+##  contrast                        estimate    SE df t.ratio p.value
+##  c(-2, 1, 1, 0, 0, 0, 0, 0, 0)      3.167 0.925 15   3.424  0.0038
+##  c(0, 0, 0, 0, 0, 0, -2, 1, 1)      3.833 1.060 15   3.601  0.0026
+##  c(-2, 1, 1, 0, 0, 0, 2, -1, -1)   -0.667 1.320 15  -0.505  0.6211</code></pre>
+    </div>
+    <div class="mini">This panel floats above everything so you can peek while filling cards/tables.</div>
+  </div>
+</div>
+
 <!-- Floating Calculator (always available) -->
 <div id="floatCalc" aria-label="Floating calculator">
   <header>
@@ -993,6 +1075,28 @@ contrast(em6.cell, cell6.list)
     const ok = closeEnough(v, expected, tol);
     return { ok, msg: ok ? 'ok' : `exp≈${expected}` };
   }
+
+  (function initFloatROut(){
+    const box = document.getElementById('floatROut');
+    const body = document.getElementById('routBody');
+    const min = document.getElementById('routMin');
+    if (!box || !body || !min) return;
+
+    function showTab(id){
+      body.querySelectorAll('.rpanel').forEach(p => p.style.display = (p.id === id) ? 'block' : 'none');
+      body.querySelectorAll('.rtab').forEach(b => b.setAttribute('aria-pressed', String(b.getAttribute('data-tab') === id)));
+    }
+
+    body.querySelectorAll('.rtab').forEach(b => {
+      b.addEventListener('click', () => showTab(b.getAttribute('data-tab')));
+    });
+
+    min.addEventListener('click', () => {
+      const hidden = body.style.display === 'none';
+      body.style.display = hidden ? 'block' : 'none';
+      min.textContent = hidden ? 'Hide' : 'Show';
+    });
+  })();
 
   (function initFloatCalc(){
     const box = document.getElementById('floatCalc');
